# cmake_learn

./: Readme.md
使用qt+opencv/: CMakeLists.txt  main.cpp
自己生成能给别人使用的cmake/JsonParse/: CMakeLists.txt
自己生成能给别人使用的cmake/JsonParse/cmake/: JsonParseConfig.cmake.in
自己生成能给别人使用的cmake/JsonParse/src/: JsonParse.cpp
自己生成能给别人使用的cmake/使用者/: CMakeLists.txt  main.cpp
自己的多个子项目/: CMakeLists.txt
自己的多个子项目/JsonParse/: CMakeLists.txt
自己的多个子项目/JsonParse/include/JsonParse/: JsonParse.h
自己的多个子项目/Request/: CMakeLists.txt
自己的多个子项目/Request/include/Request/: Request.h
自己的多个子项目/Request/src/: Request.cpp
自己的多个子项目/my_project/: CMakeLists.txt
自己的多个子项目/my_project/src/: main.cpp
